kubernetes/flagger/canaries/front-end/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front-end
  namespace: sock-shop
spec:
  host: front-end.sock-shop.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
